// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin dashboard widget recently created users (3 users total) Basic render test 1`] = `
<div
  className="dashboard-list-widget recently-created-users"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      Recently Created Users
    </div>
  </div>
  <div
    className="items-container"
  >
    <div
      className="items"
    >
      <div
        className="item"
      >
        <img
          alt="Avatar for undefined"
          className="avatar avatar-color-6 item-image"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
        <div
          className="info"
        >
          <div
            className="name"
          >
            user1
          </div>
          <div
            className="description"
          >
            Created Tuesday, October 30, 2018 12:00 AM
          </div>
        </div>
        <div
          className="value"
        />
      </div>
      <div
        className="item"
      >
        <img
          alt="Avatar for undefined"
          className="avatar avatar-color-6 item-image"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
        <div
          className="info"
        >
          <div
            className="name"
          >
            user2
          </div>
          <div
            className="description"
          >
            Created Tuesday, October 30, 2018 12:00 AM
          </div>
        </div>
        <div
          className="value"
        />
      </div>
      <div
        className="item"
      >
        <img
          alt="Avatar for undefined"
          className="avatar avatar-color-6 item-image"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
        <div
          className="info"
        >
          <div
            className="name"
          >
            user3
          </div>
          <div
            className="description"
          >
            Created Tuesday, October 30, 2018 12:00 AM
          </div>
        </div>
        <div
          className="value"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Site admin dashboard widget recently created users (5 users total) Basic render test 1`] = `
<div
  className="dashboard-list-widget recently-created-users"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      Recently Created Users
    </div>
  </div>
  <div
    className="items-container"
  >
    <div
      className="items"
    >
      <div
        className="item"
      >
        <img
          alt="Avatar for undefined"
          className="avatar avatar-color-6 item-image"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
        <div
          className="info"
        >
          <div
            className="name"
          >
            user1
          </div>
          <div
            className="description"
          >
            Created Tuesday, October 30, 2018 12:00 AM
          </div>
        </div>
        <div
          className="value"
        />
      </div>
      <div
        className="item"
      >
        <img
          alt="Avatar for undefined"
          className="avatar avatar-color-6 item-image"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
        <div
          className="info"
        >
          <div
            className="name"
          >
            user2
          </div>
          <div
            className="description"
          >
            Created Tuesday, October 30, 2018 12:00 AM
          </div>
        </div>
        <div
          className="value"
        />
      </div>
      <div
        className="item"
      >
        <img
          alt="Avatar for undefined"
          className="avatar avatar-color-6 item-image"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
        <div
          className="info"
        >
          <div
            className="name"
          >
            user3
          </div>
          <div
            className="description"
          >
            Created Tuesday, October 30, 2018 12:00 AM
          </div>
        </div>
        <div
          className="value"
        />
      </div>
      <div
        className="item"
      >
        <img
          alt="Avatar for undefined"
          className="avatar avatar-color-6 item-image"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        />
        <div
          className="info"
        >
          <div
            className="name"
          >
            user4
          </div>
          <div
            className="description"
          >
            Created Tuesday, October 30, 2018 12:00 AM
          </div>
        </div>
        <div
          className="value"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Site admin dashboard widget recently created users (no users) Basic render test 1`] = `
<div
  className="dashboard-list-widget recently-created-users"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      Recently Created Users
    </div>
  </div>
  <div
    className="no-items"
  >
    No users found
  </div>
</div>
`;
